# gooseberry

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
src/: configuration.rs  errors.rs  lib.rs  main.rs  utils.rs
src/gooseberry/: cli.rs  database.rs  knowledge_base.rs  markdown.rs  mod.rs  search.rs  tag.rs
tests/: cli.rs
