[package]
name = "gooseberry"
version = "0.9.2"
authors = ["Ninjani"]
edition = "2021"
description = "A command line utility to generate a knowledge base from Hypothesis annotations "
repository = "https://github.com/out-of-cheese-error/gooseberry"
readme = "README.md"
license = "MIT"
keywords = ["knowledge-base", "hypothesis", "cli", "wiki"]
categories = ["command-line-utilities"]
include = ["src/**/*", "README.md"]

[dependencies]
# Hypothesis
hypothesis = { version = "0.10.2", default-features = false }
tokio = { version = "1.18.0", features = ["macros"] }

# To extract the base URI
url = "2.2.2"

# CLI
structopt = "0.3.26"

# Database
sled = "0.34.7"

# Configuration management
confy = "0.4.0"
directories-next = "1.0.1"

# Error handling
eyre = "0.6.8"
color-eyre = "0.6.1"
thiserror = "1.0.30"

# Serializing
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
bincode = "1.3.3"

# Parsing and manipulating dates
chrono = { version = "0.4.19", features = ["serde"] }
chrono-english = "0.1.7"

# Fuzzy search
skim = "0.9.4"

# Console related
dialoguer = "0.10.0"
bat = { version = "0.20.0", default-features = false, features = ["regex-fancy"] }

# Indicator bar
indicatif = "0.16.2"

# Templating markdown
handlebars = "4.2.2"

# Sanitizing filenames
sanitize-filename = "0.3.0"
handlebars_misc_helpers = "0.12.1"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
tempfile = "3.3.0"
dotenv = "0.15.0"
futures = "0.3.21"

[profile.release]
panic = 'abort'
