[package]
name = "gooseberry"
version = "0.10.0"
authors = ["Ninjani"]
edition = "2021"
description = "A command line utility to generate a knowledge base from Hypothesis annotations "
repository = "https://github.com/out-of-cheese-error/gooseberry"
readme = "README.md"
license = "MIT"
keywords = ["knowledge-base", "hypothesis", "cli", "wiki"]
categories = ["command-line-utilities"]
include = ["src/**/*", "README.md"]

[dependencies]
# Hypothesis
hypothesis = { version = "0.11.1", default-features = false }
tokio = { version = "1.20.1", features = ["macros"] }

# To extract the base URI
url = "2.2.2"

# CLI
clap = { version = "4.4.12", features = ["derive", "env"] }
clap_complete = "4.4.5"

# Database
sled = "0.34.7"

# Configuration management
confy = "0.5.1"
directories-next = "1.0.1"

# Error handling
eyre = "0.6.11"
color-eyre = "0.6.2"
thiserror = "1.0.53"

# Serializing
serde = "1.0.193"
serde_json = "1.0.108"
serde_derive = "1.0.193"
ciborium = "0.2.1"

# Parsing and manipulating dates
chrono = { version = "0.4.31", features = ["serde"] }
chrono-english = "0.1.7"

# Fuzzy search
skim = "0.10.4"

# Console related
dialoguer = "0.11.0"
bat = { version = "0.24.0", default-features = false, features = ["regex-fancy"] }

# Indicator bar
indicatif = "0.17.7"

# Templating markdown
handlebars = "4.3.7"

# Sanitizing filenames
sanitize-filename = "0.5.0"
handlebars_misc_helpers = "0.13.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempfile = "3.9.0"
dotenv = "0.15.0"
futures = "0.3.30"

[profile.release]
panic = 'abort'
